fun4all matching push

--- a/ElectronJet_Correlations.ipynb
+++ b/ElectronJet_Correlations.ipynb
@@ -42,10 +42,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "7ccf9733-f88f-4107-b301-a5912c42dd9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.05589983 7.49040149 6.92490314 6.18125647 5.15812941 4.46514878\n",
+      " 3.75255549 3.291658   2.9010392  2.46138875 2.11326405 1.79292394\n",
+      " 1.67851676 1.41701464 1.2405007  1.00024563 0.9904393  0.94957959\n",
+      " 0.87603212 0.75999055 0.67173358 0.58020784 0.585111   0.52463864\n",
+      " 0.446188   0.50339159 0.45109117 0.39225319 0.42984412 0.39225319\n",
+      " 0.36610297 0.34322154 0.3203401  0.32197449 0.33831837 0.30889938\n",
+      " 0.28438356 0.26313651 0.23535191 0.23371752 0.23535191 0.22717997\n",
+      " 0.24842702 0.23535191 0.23862069 0.20429853 0.18468588 0.16834199\n",
+      " 0.15853566 0.18468588 0.18305149 0.15526689 0.16343883 0.17324516\n",
+      " 0.19122343 0.14382617 0.15199811 0.16180444 0.13728862 0.14382617\n",
+      " 0.17161077 0.12748229 0.11767596 0.14382617 0.14546056 0.11931034\n",
+      " 0.10460085 0.10133207 0.12911667 0.13075106 0.12421351 0.12257912\n",
+      " 0.1258479  0.12094473 0.10460085 0.11931034 0.12257912 0.10133207\n",
+      " 0.09152574 0.09642891 0.10786963 0.12094473 0.08825697 0.1111384\n",
+      " 0.08989136 0.08825697 0.08989136 0.08825697 0.08989136 0.07191308\n",
+      " 0.09152574 0.10296646 0.0980633  0.08498819 0.06864431 0.08825697\n",
+      " 0.06700992 0.07354747 0.08498819 0.0702787  0.1111384  0.08008503\n",
+      " 0.07354747 0.08498819 0.06537553 0.07518186 0.06700992 0.07681625\n",
+      " 0.08498819 0.08825697 0.06374114 0.0702787  0.06864431 0.07681625\n",
+      " 0.06537553 0.06210675 0.06700992 0.07354747 0.06700992 0.07191308\n",
+      " 0.06864431 0.08498819 0.06864431 0.07518186 0.09152574 0.06537553\n",
+      " 0.08008503 0.07845064]\n",
+      "[8.06441218 7.50554106 6.93359694 6.18353307 5.16057015 4.45789593\n",
+      " 3.75848997 3.27969103 2.90711029 2.45282324 2.10312026 1.80407519\n",
+      " 1.68805224 1.41515318 1.22069218 1.00171928 1.00662166 0.93472011\n",
+      " 0.87425745 0.75986862 0.6765282  0.57031    0.58828539 0.52292034\n",
+      " 0.44284817 0.51311559 0.44611642 0.39382438 0.42814103 0.3823855\n",
+      " 0.36931249 0.35297123 0.31375221 0.31865458 0.34643473 0.29904507\n",
+      " 0.29250857 0.25982605 0.23041178 0.23694828 0.23531415 0.2255094\n",
+      " 0.24838716 0.24185066 0.23694828 0.194461   0.18955862 0.16668086\n",
+      " 0.1568761  0.18955862 0.18138799 0.16014436 0.15851023 0.17321736\n",
+      " 0.18465625 0.14543722 0.14870547 0.16504673 0.14053484 0.13726659\n",
+      " 0.18302212 0.12909596 0.12092533 0.14380309 0.14216897 0.10948645\n",
+      " 0.10948645 0.09804756 0.14216897 0.12582771 0.11765708 0.12255946\n",
+      " 0.13399834 0.10948645 0.10948645 0.11112057 0.12909596 0.10131582\n",
+      " 0.09477931 0.08987693 0.11438883 0.11438883 0.09804756 0.10294994\n",
+      " 0.08987693 0.08497456 0.09641344 0.09314519 0.08497456 0.06536504\n",
+      " 0.10131582 0.10458407 0.09314519 0.08007218 0.07026742 0.08660868\n",
+      " 0.06699917 0.0817063  0.07843805 0.07353567 0.10948645 0.07680393\n",
+      " 0.08334043 0.0751698  0.0751698  0.07353567 0.05882854 0.08334043\n",
+      " 0.08007218 0.08987693 0.05882854 0.0686333  0.07843805 0.0751698\n",
+      " 0.06209679 0.06536504 0.06536504 0.07353567 0.06699917 0.07353567\n",
+      " 0.06536504 0.08334043 0.07843805 0.0686333  0.09968169 0.05392616\n",
+      " 0.08334043 0.08007218]\n"
+     ]
+    }
+   ],
    "source": [
     "h1 = file.Get(\"dPhi_e_RecoJet\")\n",
     "h1M = file.Get(\"sigmamin_dPhi_e_RecoJet\")\n",
@@ -71,13 +122,13 @@
     "\n",
     "#print(RJ_dPhi_M)\n",
     "\n",
-    "h1 = file_14T.Get(\"dPhi_e_RecoJet\")\n",
-    "h1M = file_14T.Get(\"sigmamin_dPhi_e_RecoJet\")\n",
-    "h1P = file_14T.Get(\"sigmaplus_dPhi_e_RecoJet\")\n",
-    "Tesla14_RecodPhi,Tesla14_RecodPhi_errors = TH1_to_numpy_wErrors(h1,True,False)\n",
+    "h1_14T = file_14T.Get(\"dPhi_e_RecoJet\")\n",
+    "h1M_14T = file_14T.Get(\"sigmamin_dPhi_e_RecoJet\")\n",
+    "h1P_14T = file_14T.Get(\"sigmaplus_dPhi_e_RecoJet\")\n",
+    "Tesla14_RecodPhi,Tesla14_RecodPhi_errors = TH1_to_numpy_wErrors(h1_14T,True,False)\n",
     "Tesla14_TruthdPhi,Tesla14_TruthdPhi_errors = TH1_to_numpy_wErrors(file_14T.Get(\"dPhi_e_TrueJet\"),True,False)\n",
-    "Tesla14_RecodPhi_M,Tesla14_RecodPhi_errors_M = TH1_to_numpy_wErrors(h1M,True,False)\n",
-    "Tesla14_RecodPhi_P,Tesla14_RecodPhi_errors_P = TH1_to_numpy_wErrors(h1P,True,False)\n",
+    "Tesla14_RecodPhi_M,Tesla14_RecodPhi_errors_M = TH1_to_numpy_wErrors(h1M_14T,True,False)\n",
+    "Tesla14_RecodPhi_P,Tesla14_RecodPhi_errors_P = TH1_to_numpy_wErrors(h1P_14T,True,False)\n",
     "#print(Tesla14_RecodPhi_P)\n",
     "\n",
     "RJ_dPhi_M = RJ_dPhi_M/dPhi_widths\n",
@@ -89,7 +140,11 @@
     "Tesla14_RecodPhi_M = Tesla14_RecodPhi_M/dPhi_widths\n",
     "Tesla14_RecodPhi_errors_M = Tesla14_RecodPhi_errors_M/dPhi_widths\n",
     "Tesla14_RecodPhi_P = Tesla14_RecodPhi_P/dPhi_widths\n",
-    "Tesla14_RecodPhi_errors_P = Tesla14_RecodPhi_errors_P/dPhi_widths\n"
+    "Tesla14_RecodPhi_errors_P = Tesla14_RecodPhi_errors_P/dPhi_widths\n",
+    "\n",
+    "\n",
+    "print(RJ_dPhi_P)\n",
+    "print(RJ_dPhi)\n"
    ]
   },
   {
